# PulseGraph

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
src/: run_hitl_scenario1.py  run_hitl_scenario2.py  run_hitl_scenario3.py  run_hitl_scenario4.py  run_utils.py
src/email_assistant/: __init__.py  config.py  configuration.py  consts.py  cron.py  email_assistant_hitl_workflow.py  email_assistant_workflow.py  logger.py  prompts.py  schemas.py  utils.py
src/email_assistant/chains/: __init__.py  criteria_grader.py  long_term_memory_chain.py  tools_chain.py  triage_chain.py
src/email_assistant/eval/: .env.example  Makefile  docker-compose.yml  email_dataset.py  evaluate_email_content.py  evaluate_triage.py  plot.py  prompts.py  test_tools.py
src/email_assistant/nodes/: interrupt_handler.py  llm_call.py  mark_gmail_email_as_read.py  tool.py  triage_interrupt_handler.py  triage_router.py
src/email_assistant/persistence/: long_term_memory.py  postgres_utils.py
src/email_assistant/tools/: __init__.py  base.py
src/email_assistant/tools/default/: __init__.py  calendar_tools.py  email_tools.py  prompt_templates.py
src/email_assistant/tools/gmail/: __init__.py  gmail_tools.py  run_ingest.py  setup_cron.py  setup_gmail.py
